# oxim

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  autogen.sh  autostart-oxim.desktop  config.h  config.h.in  config.status  configure  configure.ac  libtool  oxim-start.sh.in  oxim.1  oxim.pc  oxim.pc.in  oxim.spec
doc/debian/: changelog  control  copyright  install  postinst  prerm  rules  watch
doc/debian/im-switch/: oxim
etc/: Makefile.am  Makefile.in  locale.list  oxim.conf.default  oxim.conf.eeepc  panel.conf.default  panel.conf.device
panels/: Makefile.am  Makefile.in  defaultkeyboard-1.xpm  defaultkeyboard.conf  defaultkeyboard.xpm
po/: LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  oxim.pot  zh_CN.gmo  zh_CN.po  zh_HK.gmo  zh_HK.po  zh_TW.po
src/gtk-immodule/: Makefile.am  Makefile.in  gtkimcontextoxim.c  gtkimcontextoxim.h  gtkintl.h  im-oxim.c
src/gtk-immodule3/: Makefile.am  Makefile.in  gtkimcontextoxim.c  gtkimcontextoxim.c.orig  gtkimcontextoxim.h  gtkimcontextoxim.h.orig  gtkintl.h  im-oxim.c
src/include/: IC.h  fkey.h  gencin.h  gui.h  imodule.h  module.h  oxim.h  oximtool.h
src/lib/: Makefile.am  Makefile.in  oxim_addslashes.c  oxim_ascii_wb.c  oxim_charcode.c  oxim_check_file.c  oxim_config.c  oxim_filter.c  oxim_filter.c.orig  oxim_get_line.c  oxim_get_word.c  oxim_keymap.c  oxim_malloc.c  oxim_module.c  oxim_open_file.c  oxim_perr.c  oxim_qphrase.c  oxim_set_locale.c  oxim_settings.c  oxim_ucs4toutf8.c  oxim_utf8len.c  oxim_utf8toucs4.c  oximint.h  s2t.c  stable_sort.c  strcmp_wild.c  wchs_to_mbs.c
src/modules/chewing/: Makefile.am  Makefile.in  chewing.0.3.2.c  chewing.0.3.2.h  chewing.c  chewing2.c
src/modules/gen-inp/: Makefile.am  Makefile.in  gen-inp.c  gen-inp.h
src/modules/gen-inp-v1/: Makefile.am  Makefile.in  gen-inp-v1.c  gen-inp-v1.h
src/modules/sunpinyin/: Makefile.am  Makefile.in  imi_win.cpp  imi_win.h  sunpinyin.cpp  sunpinyinh.h
src/modules/unicode/: Makefile.am  Makefile.in  unicode.c  unicode.h
src/ogim/: Makefile.am  Makefile.in  gtkintl.h  ogim.c  ogimcontext.c
src/qt-immodule/: Makefile.am  Makefile.in  moc_qoximinputcontext.cpp  moc_qoximinputcontextplugin.cpp  qoximinputcontext.h  qoximinputcontext_x11.cpp  qoximinputcontextplugin.cpp
src/qt4-immodule/: Makefile.am  Makefile.in  gcin-imcontext-qt.cpp  gcin-imcontext-qt.h  gcin-qt.cpp  gcin-qt.h  moc_gcin-qt.cpp  oximtool.h  qoximinputcontext_x11.cpp  qoximinputcontextplugin.cpp  qoximinputcontextplugin.cpp.gcin  qoximinputcontextplugin.h  qt-immodule.pro
src/qt4-immodule-test/: Makefile.am  Makefile.in  lib-qt-im-oxim.la  qoximinputcontext.h  qoximinputcontext_x11.cpp  qoximinputcontextplugin.cpp  qoximinputcontextplugin.h  test-imcontext-qt.cpp  test-imcontext-qt.h
src/qt4-immodule-test/trash/: oxim-qt.cpp  oxim-qt.h
src/qt4-immodule.orig/: Makefile.am  Makefile.in  moc_qoximinputcontext.cpp  moc_qoximinputcontextplugin.cpp  moc_qoximinputcontextplugin.lo  oximtool.h  qoximinputcontext.h  qoximinputcontext_x11.cpp  qoximinputcontext_x11.lo  qoximinputcontextplugin.cpp  qoximinputcontextplugin.h  qoximinputcontextplugin.lo  qt-im-oxim.la  qt-immodule.pro
src/util/oxim-conv/: Makefile.am  Makefile.in  gencin.c  oxim-conv.c  oxim-conv.h
src/util/oxim-setup/: Makefile.am  chewing.ui  gencin.ui  gencin.ui.h  globolsetting.ui  globolsetting.ui.h  installim.ui  installim.ui.h  main.cpp  oxim-setup.pro  oxim-setup.ui  oxim-setup.ui.h
src/util/oxim2tab/: Makefile.am  gencin.c  oxim2tab.c  oxim2tab.h
src/xim/: Makefile.am  Makefile.in  fkey.c  gui.c  gui_fixed.c  gui_keyboard.c  gui_keyboard.cpp.orig  gui_menu.c  gui_msgbox.c  gui_preedit.c  gui_selectmenu.c  gui_status.c  gui_symbol.c  gui_tray.c  gui_xcin.c  oxim-agent.c  oxim_main.c  xim.c  xim_IC.c
src/xim/IMdkit/: FrameMgr.c  Makefile.am  Makefile.in  i18nMethod.c  i18nUtil.c
src/xim/IMdkit/doc/: xim.txt
src/xim/IMdkit/doc/Xi18n_sample/: IC.c  make.sh  sampleIM  sampleIM.c
src/xim/images/: close.xpm  fullchar.xpm  halfchar.xpm  out_cn.xpm  out_tw.xpm  oxim_kbd.xpm  oxim_tray.xpm  oxim_tray.xpm.1  sideback.xpm  sideback_l.xpm  sideback_r.xpm
tables/: Makefile.am  Makefile.in  cnsphone.cin  default.phr  symbol.list
