
INCLUDES = -I$(top_srcdir)/src/include $(X11_INCLUDES)

LIBS = $(X11_LIBS)

noinst_LTLIBRARIES = libIMdkit.la

libIMdkit_la_SOURCES = FrameMgr.c FrameMgr.h \
		       i18nAttr.c i18nClbk.c \
		       i18nIc.c i18nIMProto.c \
		       i18nMethod.c i18nPtHdr.c \
		       i18nTr.c i18nUtil.c \
		       i18nX.c IMConn.c \
		       IMdkit.h IMMethod.c \
		       IMValues.c Xi18n.h \
		       Xi18nTr.h Xi18nX.h \
		       XimFunc.h XimProto.h \
		       Xtrans.h
